--- a/SortLearn/SortLearn/SortLearn.vcxproj
+++ b/SortLearn/SortLearn/SortLearn.vcxproj
@@ -157,12 +157,14 @@
     <ClCompile Include="Bubble\BubbleSort.cpp" />
     <ClCompile Include="Insert\InsertSort.cpp" />
     <ClCompile Include="Select\SelectSort.cpp" />
+    <ClCompile Include="Shell\ShellSort.cpp" />
     <ClCompile Include="SortLearn.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Bubble\BubbleSort.h" />
     <ClInclude Include="Insert\InsertSort.h" />
     <ClInclude Include="Select\SelectSort.h" />
+    <ClInclude Include="Shell\ShellSort.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
