--- a/SortLearn/SortLearn/SortLearn.vcxproj
+++ b/SortLearn/SortLearn/SortLearn.vcxproj
@@ -156,6 +156,7 @@
   <ItemGroup>
     <ClCompile Include="Bubble\BubbleSort.cpp" />
     <ClCompile Include="Insert\InsertSort.cpp" />
+    <ClCompile Include="Quick\QuickSort.cpp" />
     <ClCompile Include="Select\SelectSort.cpp" />
     <ClCompile Include="Shell\ShellSort.cpp" />
     <ClCompile Include="SortLearn.cpp" />
@@ -163,6 +164,7 @@
   <ItemGroup>
     <ClInclude Include="Bubble\BubbleSort.h" />
     <ClInclude Include="Insert\InsertSort.h" />
+    <ClInclude Include="Quick\QuickSort.h" />
     <ClInclude Include="Select\SelectSort.h" />
     <ClInclude Include="Shell\ShellSort.h" />
   </ItemGroup>
