--- a/AlgorithmIdea/AlgorithmIdea/AlgorithmIdea.vcxproj
+++ b/AlgorithmIdea/AlgorithmIdea/AlgorithmIdea.vcxproj
@@ -155,6 +155,10 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="AlgorithmIdea.cpp" />
+    <ClCompile Include="Iteration\IterationLib.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Iteration\IterationLib.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
